// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FeedbackItem.vue should render feedback correct 1`] = `
<div
  class="feedback-item"
>
  <div
    class="feedback-item__head-info"
  >
    <h3>
      <span
        class="feedback-item__name"
      >
         Damian 
      </span>
       
      <span
        class="feedback-item__date"
      >
         (22.03.2022) 
      </span>
    </h3>
     
    <div
      class="feedback-item__buttons"
    >
      <base-button-stub
        class="feedback-item__edit-btn"
      >
        <i
          class="fas fa-edit"
        />
      </base-button-stub>
       
      <base-button-stub
        class="feedback-item__delete-btn"
      >
        <i
          class="fas fa-eraser"
        />
      </base-button-stub>
    </div>
  </div>
   
  <rating-icon-stub
    class="feedback-item__rating"
    rating="4"
  />
   
  <div
    class="feedback-item__comment"
  >
    
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    
    <!---->
  </div>
</div>
`;

exports[`FeedbackItem.vue should render feedback correct 2`] = `
<div
  class="feedback-item"
>
  <div
    class="feedback-item__head-info"
  >
    <h3>
      <span
        class="feedback-item__name"
      >
         Damian 
      </span>
       
      <span
        class="feedback-item__date"
      >
         (22.03.2022) 
      </span>
    </h3>
     
    <div
      class="feedback-item__buttons"
    >
      <!---->
       
      <!---->
    </div>
  </div>
   
  <rating-icon-stub
    class="feedback-item__rating"
    rating="4"
  />
   
  <div
    class="feedback-item__comment"
  >
    
    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    
    <!---->
  </div>
</div>
`;
